tests/errors/assertion.AssertionFailed.2.res
doing sth: 12 

══╡ Assertion Error ╞══════════════════════════════════════════════════════════════════════════════════════ <script> ══

  Runtime check failed

  Tried:
      [integer? x]

  ┃ File: tests/errors/assertion.AssertionFailed.2.art
  ┃ Line: 7
  ┃ 
  ┃    5 ║  
  ┃    6 ║  print ["doing sth:" doSth 2]
  ┃    7 ║► print ["doing sth:" doSth [1 2 3]]